Layout bugs fixed...

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -23,10 +23,13 @@ body{
     justify-content: space-around;
     flex-direction: column;
     height: 100%;
-    min-height: 100vh;
+    min-height: 95vh;
     max-width: 100vw;
     margin: 0;
-    padding: 0;
+    padding-top: 5vh;
+    padding-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
     text-align: center;
     width: 100%;
 }
