--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -5,11 +5,6 @@
     color: var(--color_alt);
 }
 
-.about h2
-{
-    padding-top: 2vh;
-}
-
 .about.layout .content
 {
     display: flex;
