--- a/src/pages/getconnected/getconnected.css
+++ b/src/pages/getconnected/getconnected.css
@@ -9,7 +9,7 @@
 
 .getconnected.layout
 {
-    justify-content: space-around;
+    justify-content: flex-start;
 }
 
 .getconnected.layout .content
@@ -17,8 +17,20 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    margin-top: 10vh;
     padding-left: 2vw;
+    align-self: flex-start;
     text-align: left;
+}
+
+.getconnected.layout .content>*
+{
+    padding: 0.5vh;
+}
+
+.getconnected.layout .content>*:hover
+{
+    font-weight: bold;
 }
 
 .getconnected.layout .content div
